this should fix the issue, if not i give up

--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ Custom Styles
 ===================================== */
 
 body {
-    background: url(../images/beech1920–1.png);
+    background: url("../images/beech1920–1.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -181,7 +181,7 @@ nav a.current{
 
 
 .welcome-banner {
-    background: url(../images/adobestock-lady-mobile-2.jpg);
+    background: url("../images/adobestock-lady-mobile-2.jpg");
     background-size: cover;
     padding-top: 100px;
     padding-bottom: 300px;
@@ -428,7 +428,7 @@ VVVVVVVVVVVVVVVVV Desktop styles VVVVVVVVVVVVVVVVVVVVVVV
     Desktop Home style
 ========================= */
 .welcome-banner {
-    background: url(../images/adobestock-lady.jpeg) no-repeat;
+    background: url("../images/adobestock-lady.jpeg") no-repeat;
     background-size: cover;
     padding-bottom: 630px;
     padding-top: 100px;
