--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,11 @@ nav a.current{
     animation: transformIcon 2s ease-in-out forwards;
 }
 
+.footer-text {
+    margin-left: 20px;
+    line-height: 1.5;
+}
+
 /* =============================
         Menu-Page Style 
 ================================*/
