--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,8 @@ h1 {
     color: #551480;
 }
 
-h2 {
+h2,
+th {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 1.5rem;
@@ -115,7 +116,8 @@ li a {
 p,
 a,
 label,
-button {
+button,
+td {
     font-family: 'Open Sans', sans-serif;
 }
 /* ========================
